# LangDjangoChat

./: README.md  pyproject.toml
framework/: docker-compose.yml  manage.py
framework/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
framework/chat/chatbot/: app.py
framework/chat/migrations/: 0001_initial.py  0002_initial.py
framework/chat/templates/chat/: chat.html  login.html  register.html
framework/framework/: asgi.py  settings.py  urls.py  wsgi.py
framework/members/: admin.py  forms.py  models.py
framework/members/migrations/: 0001_initial.py
frontend/: chatbot.py
