[tool.poetry]
name = "LangDjangoChat"
version = "0.1.0"
description = "The backend code for chatbot built using django framework"
authors = ["ananthanandanan <ananthanandanan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
django-cors-headers = "^4.3.1"
redis = "^5.0.6"
channels = {extras = ["daphne"], version ="^4.1.0"}
channels-redis = "^4.2.0"
huey = "^2.5.1"
gevent = "^24.2.1"
pyjwt = "^2.8.0"
environ = "^1.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[tool.poetry.group.llm.dependencies]
langchain = "^0.2.1"
langchain-openai = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"